feat: ui polish and branding updates

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,11 +115,11 @@
   --sidebar-ring: oklch(0.708 0 0);
 
   /* User Customizations */
-  --brand: 27 96% 61%;
-  --brand-foreground: 31 97% 72%;
+  --brand: 270 95% 65%;
+  --brand-foreground: 270 95% 75%;
 }
 
-.dark {
+:root.dark {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
@@ -153,8 +153,8 @@
   --sidebar-ring: oklch(0.556 0 0);
 
   /* User Customizations */
-  --brand: 31 97% 72%;
-  --brand-foreground: 27 96% 61%;
+  --brand: 270 95% 75%;
+  --brand-foreground: 270 95% 65%;
 }
 
 @layer base {
